--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ reqwest = { version = "0.12.19", features = ["json"] }
 serde = { version = "1.0.219", features = ["derive"] }
 tokio = { version = "1.45.1", features = ["full"] }
 serde_json = "1.0"
+colored = "3.0.0"
